# gkl-disco-backend

./: .gitignore  Cargo.toml  Dockerfile  database.db
migration/: Cargo.toml
migration/src/: lib.rs  m20240409_085436_create_song_request_table.rs  m20240411_124501_create_access_token_table.rs  m20240417_053155_create_forbidden_artist.rs  m20240418_055748_add_song_request_marks.rs
src/: error.rs  main.rs  models.rs  music_parse.rs
src/application/handlers/: external_track_handlers.rs  forbidden_artist_handlers.rs  mod.rs  song_request_handlers.rs
src/data/: mod.rs
src/data/repository/: access_token.rs  forbidden_artist.rs  mod.rs  song_request.rs
src/data/source/: mod.rs  yandex_music_api.rs
src/domain/: mod.rs
src/domain/entities/: access_token.rs  forbidden_artist.rs  mod.rs  prelude.rs  song_request.rs
src/domain/models/: found_track.rs  mod.rs
src/domain/services/: access_token.rs  forbidden_artist.rs  mod.rs  song_request.rs
src/error/: mod.rs
src/infrastructure/: database.rs  state.rs
src/presentation/routes/: external_music_routes.rs  forbidden_artist_routes.rs  mod.rs  song_request_routes.rs
